# Twitter-backend

./: .env  Cargo.toml
migrations/2026-05-03-000001_create_users/: up.sql
src/: database.rs  errors.rs  main.rs
src/handlers/: health.rs  users.rs
src/migrations/2026-05-03-000001_create_users/: up.sql
src/models/: user.rs
src/routers/: health.rs  users.rs
src/schema/: users.rs
